--- a/app/src/main/res/layout/addmoneyactivity.xml
+++ b/app/src/main/res/layout/addmoneyactivity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,49 +10,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:textSize="24sp"
-        android:text="@string/activityTitleAddMoney"/>
+        android:text="@string/activityTitleAddMoney"
+        android:textSize="24sp" />
 
-
-    <EditText
-        android:id="@+id/editTextAddMoney"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/addMoneyInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:hint="@string/amountHint"
-        android:maxLength="7"
-        android:inputType="numberDecimal"
-        android:textColorHint="#616161"
-        style="@style/MyEditTextTheme"/>
+        style="@style/TextInputLayoutTheme"
+        app:errorEnabled="true">
 
-    <RelativeLayout
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextAddMoney"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:lines="1"
+            android:maxLength="7" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp">
 
-        <LinearLayout
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonPlus"
+            style="@style/FilledIconButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:orientation="horizontal">
+            android:text="@string/add"
+            app:icon="@drawable/ic_baseline_add_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/buttonMinus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_baseline_remove_24"
-                android:layout_marginEnd="4dp"
-                android:text="@string/remove"
-                style="@style/ButtonsColorOutline"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonMinus"
+            style="@style/OutlineIconButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/remove"
+            app:icon="@drawable/ic_baseline_remove_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/buttonPlus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add"
-                android:drawableLeft="@drawable/ic_baseline_add_24"
-                android:layout_marginStart="4dp"
-                style="@style/ButtonsColor"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-    </RelativeLayout>
 </LinearLayout>
