--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MySecondProjectMoneyBox" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/statusBarColor</item>
         <item name="colorPrimaryVariant">@color/statusBarColor</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorAccent">#c8a00b</item>
@@ -18,9 +19,11 @@
         <item name="android:windowSoftInputMode">adjustResize</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
     <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
         <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
     </style>
+
     <style name="AccentColorForProgressBar">
         <item name="colorAccent">@color/mainActivityButtonsColor</item>
     </style>
